--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,38 @@ body *{
 }
 
 h1 {
+    font-family: 'Lato', sans-serif; 
+    font-size: 3rem;                   
     font-weight: 900;
+    text-align: center;             
+    letter-spacing: 2px;                
+    margin: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.05); 
+}
+
+h2 {
+    font-family: 'Lato', sans-serif;
+    font-weight: 700;
+    color: #333;
+    margin-bottom: 8px;
 }
 
 body {
-    background-color: lightgray;
+    font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f8f8f8;
+}
+
+p {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700;
+    color: #444;
+    margin-bottom: 8px;
 }
 
 .page {
-    width: 850px;
+    width: 1100px;
     background-color: white;
     margin: auto;
     padding: 50px;
@@ -20,6 +43,15 @@ body {
 
 .vis-container {
     width: 100%;
+}
+
+.description {
+    background-color: #f4f8fb;
+}
+
+.description-container {
+    display: flex;
+    flex-direction: column;
 }
 
 .description h2,
@@ -35,10 +67,91 @@ h1 {
     padding-right: 20px;
 }
 
+.description-top {
+    padding-bottom: 20px;
+}
+
+.description-bottom {
+    padding-top: 20px;
+}
+
 .pure-g {
-    margin-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.pure-u-1-2 {
+    flex: 1; /* Ensures equal width for both boxes */
+    display: flex; /* Use flexbox for equal height */
+    align-items: stretch; /* Stretch the boxes to equal height */
+    padding: 0 15px;
+}
+
+.pure-u-1-3 {
+    flex: 1; /* Ensures equal width for both boxes */
+    display: flex; /* Use flexbox for equal height */
+    align-items: stretch; /* Stretch the boxes to equal height */
+    justify-content: space-between;
+    padding: 0 15px;
+}
+
+.pure-u-2-3 {
+    flex: 1; /* Ensures equal width for both boxes */
+    display: flex; /* Use flexbox for equal height */
+    align-items: stretch; /* Stretch the boxes to equal height */
+    justify-content: space-between;
+    padding: 0 15px;
+}
+
+.pure-u-1-4 {
+    flex: 1; /* Ensures equal width for both boxes */
+    display: flex; /* Use flexbox for equal height */
+    align-items: stretch; /* Stretch the boxes to equal height */
+    justify-content: space-between;
+    padding: 0 15px;
+}
+
+.pure-u-3-4 {
+    flex: 1; /* Ensures equal width for both boxes */
+    display: flex; /* Use flexbox for equal height */
+    align-items: stretch; /* Stretch the boxes to equal height */
+    justify-content: space-between;
+    padding: 0 15px;
 }
 
 .small-font {
-    font-size: 14px;
+    font-size: 20px;
+}
+
+.large-font {
+    font-family: 'Lato', sans-serif;
+    font-size: 60px; 
+    font-weight: bold; 
+    color: #ff7f50; 
+    margin: 10px 0;  
+}
+
+.emphasis-container {
+    text-align: center; 
+    margin: 20px 0;   
+}
+
+.graph-container {
+    display: flex;
+    justify-content: center; /* Center the graph */
+    width: 100%; /* Ensure it takes up the full width */
+    margin: 20px;
+}
+
+.pop-box {
+    padding: 10px;      
+    margin: 20px;
+    background-color: #deedf9;
+    border-radius: 5px;   
+    flex: 1; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
