--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,22 @@ p {
 
 .vis-container {
     width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
+}
+
+.big-container {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
+    right: -25px;
+}
+
+.fuel-container {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
+    right: -8px;
 }
 
 .description {
@@ -69,6 +85,8 @@ h1 {
 
 .description-top {
     padding-bottom: 20px;
+    position: relative;
+    top: -20px;
 }
 
 .description-bottom {
@@ -92,16 +110,17 @@ h1 {
     flex: 1; /* Ensures equal width for both boxes */
     display: flex; /* Use flexbox for equal height */
     align-items: stretch; /* Stretch the boxes to equal height */
-    justify-content: space-between;
-    padding: 0 15px;
+    justify-content: center;
+    height: 100%;
 }
 
 .pure-u-2-3 {
     flex: 1; /* Ensures equal width for both boxes */
     display: flex; /* Use flexbox for equal height */
     align-items: stretch; /* Stretch the boxes to equal height */
-    justify-content: space-between;
+    justify-content: center;
     padding: 0 15px;
+    height: 100%;
 }
 
 .pure-u-1-4 {
@@ -139,9 +158,15 @@ h1 {
 
 .graph-container {
     display: flex;
-    justify-content: center; /* Center the graph */
+    justify-content: space-between; /* Center the graph */
     width: 100%; /* Ensure it takes up the full width */
+    height: 100%;
     margin: 20px;
+}
+
+.title-container {
+    padding-left: 20px; 
+    margin-bottom: 20px;
 }
 
 .pop-box {
@@ -154,4 +179,111 @@ h1 {
     flex-direction: column;
     justify-content: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.three-box {
+    padding: 20px;      
+    margin: 20px;
+    background-color: #deedf9;
+    border-radius: 5px;   
+    height: 200px;
+    flex: 1; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.rank-box {
+    padding: 20px;      
+    margin: 20px;
+    background-color: #deedf9;
+    border-radius: 5px;  
+    width: 500px; 
+    height: 290px; 
+    flex: 1; 
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    top: -15px;
+    left: -10px;
+}
+
+.stock-box {
+    padding: 20px;      
+    margin: 20px;
+    background-color: #deedf9;
+    border-radius: 5px;  
+    width: 50px; 
+    height: 430px; 
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    top: -12px;
+    left: -10px;
+}
+
+.fuel-box {
+    padding: 20px;      
+    margin: 20px;
+    background-color: #deedf9;
+    border-radius: 5px;  
+    width: 50px; 
+    height: 195px; 
+    flex: 1;
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    top: -10px;
+    left: 20px;
+}
+
+.left-box {
+    padding: 20px;      
+    margin: 20px;
+    background-color: #deedf9;
+    border-radius: 5px;  
+    width: 100px;
+    height: 100px;
+    flex: 1; 
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    top: -15px;
+    left: -10px;
+}
+
+.right-box {
+    padding: 20px;      
+    margin: 10px;
+    background-color: #deedf9;
+    border-radius: 5px; 
+    width: 100px;
+    height: 100px; 
+    flex: 1; 
+    flex-direction: column;
+    justify-content: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    top: -15px;
+    left: 5px;
+}
+
+.out-box {
+    padding: 15px;
+    margin: 50px;
+    background-color: #f5f5f5;
+    border-radius: 5px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    left: -65px;
 }
